ADD icon in footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -224,36 +224,71 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a
-          href="https://i.imgur.com/JCCB1OW.png"
-          lang="en"
-          class="footer-log link"
-          ><span>Web</span>Studio</a
-        >
+      <div class="container footer-container">
+        <div class="footer-left-part">
+          <a
+            href="https://i.imgur.com/JCCB1OW.png"
+            lang="en"
+            class="footer-log link"
+            ><span>Web</span>Studio</a
+          >
 
-        <address class="footer-address">
-          <!--<divclass="footer-addr"></div>-->
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a
-                href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
-                class="footer-link-address link"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+          <address class="footer-address">
+            <!--<divclass="footer-addr"></div>-->
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
+                  class="footer-link-address link"
+                  >г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@example.com" class="footer-link link">
+                  info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380991111111" class="footer-link link"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc">
+          <p class="footer-soc-text">Приєднуйтесь</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@example.com" class="footer-link link">
-                info@example.com</a
-              >
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380991111111" class="footer-link link"
-                >+38 099 111 11 11</a
-              >
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
