--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                        href="./images/icons.svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -182,7 +182,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                        href="./images/icons.svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -191,7 +191,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                        href="./images/icons.svg.svg#icon-icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -200,7 +200,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                        href="./images/icons.svg.svg#icon-icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -221,7 +221,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                        href="./images/icons.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -230,7 +230,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                        href="./images/icons.svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -239,7 +239,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                        href="./images/icons.svg.svg#icon-icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -248,7 +248,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                        href="./images/icons.svg.svg#icon-icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -269,7 +269,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                        href="./images/icons.svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -278,7 +278,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                        href="./images/icons.svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -287,7 +287,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                        href="./images/icons.svg.svg#icon-icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -296,7 +296,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                        href="./images/icons.svg.svg#icon-icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -317,7 +317,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-instagram"
+                        href="./images/icons.svg.svg#icon-icon-instagram"
                       ></use>
                     </svg>
                   </a>
@@ -326,7 +326,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-twitter"
+                        href="./images/icons.svg.svg#icon-icon-twitter"
                       ></use>
                     </svg>
                   </a>
@@ -335,7 +335,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-facebook"
+                        href="./images/icons.svg.svg#icon-icon-facebook"
                       ></use>
                     </svg>
                   </a>
@@ -344,7 +344,7 @@
                   <a href="" class="info-soc-link link">
                     <svg class="info-soc-icon" width="20" height="20">
                       <use
-                        href="./images/log-icon-svg.svg#icon-icon-linkedin"
+                        href="./images/icons.svg.svg#icon-icon-linkedin"
                       ></use>
                     </svg>
                   </a>
@@ -357,29 +357,30 @@
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
             <li class="clients-item"><svg class="clients-log" width="170" height="92">
-              <use href="./images/log-icon-svg.svg#icon-logo-yaco"></use>
+              <use href="./images/icons.svg.svg#icon-logo-yaco"></use>
             </svg></li>
             <li class="clients-item"><svg class="clients-log" width="170" height="92">
-              <use href="./images/log-icon-svg.svg#icon-logo-taglin-here"></use>
+              <use href="./images/icons.svg.svg#icon-logo-taglin-here"></use>
             </svg></li>
             <li class="clients-item"><svg class="clients-log"width="170" height="92">
-              <use href="./images/log-icon-svg.svg#icon-logo-company"></use>
+              <use href="./images/icons.svg.svg#icon-logo-company"></use>
             </svg></li>
             <li class="clients-item"><svg class="clients-log"width="170" height="92">
-              <use href="./images/log-icon-svg.svg#icon-logo-foster-peters"></use>
+              <use href="./images/icons.svg.svg#icon-logo-foster-peters"></use>
             </svg></li>
             <li class="clients-item"><svg class="clients-log"width="170" height="92">
-              <use href="./images/log-icon-svg.svg#icon-logo-brand"></use>
+              <use href="./images/icons.svg.svg#icon-logo-brand"></use>
             </svg></li>
             <li class="clients-item"><svg class="clients-log"width="170" height="92">
-              <use href="./images/log-icon-svg.svg#icon-logo-tig-line"></use>
+              <use href="./images/icons.svg#icon-logo-tig-line"></use>
             </svg></li>
           </ul>
           </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
+        <div class="footer-left-part">
         <a
           href="https://i.imgur.com/JCCB1OW.png"
           lang="en"
@@ -394,7 +395,7 @@
               <a
                 href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
                 class="footer-link-address link"
-                >г. Киев, пр-т Леси Украинки, 26</a
+                >г. Киев, пр-т Леси Украинки, 26  </a
               >
             </li>
             <li class="footer-item">
@@ -408,7 +409,49 @@
               >
             </li>
           </ul>
-        </address>
+          </address>
+        </div>
+        <div class="footer-soc">
+            <p class="footer-soc-text">Приєднуйтесь</p>
+            <ul class="footer-soc-list list">
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link link">
+                    <svg class="footer-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/icons.svg#icon-icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link link">
+                    <svg class="footer-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/icons.svg.svg#icon-icon-twitter"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link link">
+                    <svg class="footer-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/icons.svg.svg#icon-icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link link">
+                    <svg class="footer-soc-icon" width="20" height="20">
+                      <use
+                        href="./images/icons.svg.svg#icon-icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+            </ul>
+        </div>
       </div>
     </footer>
   </body>
