--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
             <li class="features-item">
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
               </p>
             </li>
             <li class="features-item">
               <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
               </p>
             </li>
             <li class="features-item">
@@ -118,7 +120,8 @@
             <li class="features-item">
               <h3 class="features-title">Сучасні технології</h3>
               <p class="features-text">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
               </p>
             </li>
           </ul>
@@ -350,30 +353,58 @@
                   </a>
                 </li>
               </ul>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="clients">
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
-            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log" width="170" height="92">
-              <use href="./images/icons.svg.svg#icon-logo-yaco"></use>
-            </svg></a></li>
-            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log" width="170" height="92">
-              <use href="./images/icons.svg.svg#icon-logo-taglin-here"></use>
-            </svg></a></li>
-            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
-              <use href="./images/icons.svg.svg#icon-logo-company"></use>
-            </svg></a></li>
-            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
-              <use href="./images/icons.svg.svg#icon-logo-foster-peters"></use>
-            </svg></a></li>
-            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
-              <use href="./images/icons.svg.svg#icon-logo-brand"></use>
-            </svg></a></li>
-            <li class="clients-item"><a href="" class="clients-link"><svg class="clients-log"width="170" height="92">
-              <use href="./images/icons.svg.svg#icon-logo-tig-line"></use>
-            </svg></a></li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-log" width="170" height="92">
+                  <use href="./images/icons.svg.svg#icon-logo-yaco"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-log" width="170" height="92">
+                  <use
+                    href="./images/icons.svg.svg#icon-logo-taglin-here"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-log" width="170" height="92">
+                  <use
+                    href="./images/icons.svg.svg#icon-logo-company"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-log" width="170" height="92">
+                  <use
+                    href="./images/icons.svg.svg#icon-logo-foster-peters"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-log" width="170" height="92">
+                  <use href="./images/icons.svg.svg#icon-logo-brand"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-log" width="170" height="92">
+                  <use
+                    href="./images/icons.svg.svg#icon-logo-tig-line"
+                  ></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </section>
@@ -381,76 +412,68 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-left-part">
-        <a
-          href="https://i.imgur.com/JCCB1OW.png"
-          lang="en"
-          class="footer-log link"
-          ><span>Web</span>Studio</a
-        >
+          <a
+            href="https://i.imgur.com/JCCB1OW.png"
+            lang="en"
+            class="footer-log link"
+            ><span>Web</span>Studio</a
+          >
 
-        <address class="footer-address">
-          <!--<divclass="footer-addr"></div>-->
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a
-                href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
-                class="footer-link-address link"
-                >г. Киев, пр-т Леси Украинки, 26  </a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="mailto:info@example.com" class="footer-link link">
-                info@example.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="tel:+380991111111" class="footer-link link"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
+          <address class="footer-address">
+            <!--<divclass="footer-addr"></div>-->
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
+                  class="footer-link-address link"
+                  >г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@example.com" class="footer-link link">
+                  info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380991111111" class="footer-link link"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
           </address>
         </div>
         <div class="footer-soc">
-            <p class="footer-soc-text">Приєднуйтесь</p>
-            <ul class="footer-soc-list list">
-                <li class="footer-soc-item">
-                  <a href="" class="footer-soc-link link">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/icons.svg.svg#icon-icon-instagram"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="footer-soc-item">
-                  <a href="" class="footer-soc-link link">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/icons.svg.svg#icon-icon-twitter"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="footer-soc-item">
-                  <a href="" class="footer-soc-link link">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/icons.svg.svg#icon-icon-facebook"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="footer-soc-item">
-                  <a href="" class="footer-soc-link link">
-                    <svg class="footer-soc-icon" width="20" height="20">
-                      <use
-                        href="./images/icons.svg.svg#icon-icon-linkedin"
-                      ></use>
-                    </svg>
-                  </a>
-                </li>
-            </ul>
+          <p class="footer-soc-text">Приєднуйтесь</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
