--- a/portfolio.html
+++ b/portfolio.html
@@ -111,113 +111,131 @@
 
           <ul class="product-list list">
             <li class="product-item">
-              <img
-                src="./images/imgP1-min.jpg"
-                alt="фотография веб-сайта"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Технокряк</h3>
-                <p class="product-specialization">Веб-сайт</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP1-min.jpg"
+                  alt="фотография веб-сайта"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Технокряк</h3>
+                  <p class="product-specialization">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP2-min.jpg"
-                alt="фотография дизайна"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Постер New Orlean vs Golden Star</h3>
-                <p class="product-specialization">Дизайн</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP2-min.jpg"
+                  alt="фотография дизайна"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Постер New Orlean vs Golden Star</h3>
+                  <p class="product-specialization">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP3-min.jpg"
-                alt="фотография Приложения"
-                width="370"
-                class="product-img"
-              />
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP3-min.jpg"
+                  alt="фотография Приложения"
+                  width="370"
+                  class="product-img"
+                />
 
-              <div class="product">
-                <h3 class="product-name">Ресторан Seafood</h3>
-                <p class="product-specialization">Приложение</p>
-              </div>
+                <div class="product">
+                  <h3 class="product-name">Ресторан Seafood</h3>
+                  <p class="product-specialization">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP4-min.jpg"
-                alt="фотография маркетинга"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Проект Prime</h3>
-                <p class="product-specialization">Маркетинг</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP4-min.jpg"
+                  alt="фотография маркетинга"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Проект Prime</h3>
+                  <p class="product-specialization">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP5-min.jpg"
-                alt="фотография приложения 2"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Проект Boxes</h3>
-                <p class="product-specialization">Приложение</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP5-min.jpg"
+                  alt="фотография приложения 2"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Проект Boxes</h3>
+                  <p class="product-specialization">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP6-min.jpg"
-                alt="фотография веб-сайта 2"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Inspiration has no Borders</h3>
-                <p class="product-specialization">Веб-сайт</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP6-min.jpg"
+                  alt="фотография веб-сайта 2"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Inspiration has no Borders</h3>
+                  <p class="product-specialization">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP7-min.jpg"
-                alt="фотография дизайна 2"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Издание Limited Edition</h3>
-                <p class="product-specialization">Дизайн</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP7-min.jpg"
+                  alt="фотография дизайна 2"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Издание Limited Edition</h3>
+                  <p class="product-specialization">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP8-min.jpg"
-                alt="фотография маркетинга 2"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Проект LAB</h3>
-                <p class="product-specialization">Маркетинг</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP8-min.jpg"
+                  alt="фотография маркетинга 2"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Проект LAB</h3>
+                  <p class="product-specialization">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="product-item">
-              <img
-                src="./images/imgP9-min.jpg"
-                alt="фотография приложения 2"
-                width="370"
-                class="product-img"
-              />
-              <div class="product">
-                <h3 class="product-name">Growing Business</h3>
-                <p class="product-specialization">Приложение</p>
-              </div>
+              <a href="" class="product-link">
+                <img
+                  src="./images/imgP9-min.jpg"
+                  alt="фотография приложения 2"
+                  width="370"
+                  class="product-img"
+                />
+                <div class="product">
+                  <h3 class="product-name">Growing Business</h3>
+                  <p class="product-specialization">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
