--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -34,7 +34,7 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a
-            href="https://i.imgur.com/JCCB1OW.png"
+            href="https://i.imgur.com/KmzYQjf.png"
             lang="en"
             class="header-link-log link"
             ><span>Web</span>Studio</a
@@ -47,7 +47,7 @@
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
-                Студия
+                Студія
               </a>
             </li>
             <li class="header-item">
@@ -56,7 +56,7 @@
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
-                Портфолио
+                Портфоліо
               </a>
             </li>
             <li class="header-item">
@@ -65,7 +65,7 @@
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
-                Контакты
+                Контакти
               </a>
             </li>
           </ul>
@@ -424,7 +424,7 @@
       <div class="container footer-container">
         <div class="footer-left-part">
           <a
-            href="https://i.imgur.com/JCCB1OW.png"
+            href="https://i.imgur.com/SfubzdW.png"
             lang="en"
             class="footer-log link"
             ><span>Web</span>Studio</a
