--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,11 +30,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+   <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a
-            href="https://i.imgur.com/JCCB1OW.png"
+            href="https://i.imgur.com/KmzYQjf.png"
             lang="en"
             class="header-link-log link"
             ><span>Web</span>Studio</a
@@ -43,11 +43,11 @@
           <ul class="header-list list">
             <li class="header-item">
               <a
-                href=""
+                href="https://i.imgur.com/fbQEZqo.png"
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
-                Студия
+                Студія
               </a>
             </li>
             <li class="header-item">
@@ -56,7 +56,7 @@
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
-                Портфолио
+                Портфоліо
               </a>
             </li>
             <li class="header-item">
@@ -65,7 +65,7 @@
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
-                Контакты
+                Контакти
               </a>
             </li>
           </ul>
@@ -76,12 +76,12 @@
               href="mailto:info@devstudio.com"
               class="heade-link-communication link"
             >
-              info@devstudio.com
+              <svg class="heade-icon" width="16" height="12"> <use href="./images/icons.svg.svg#icon-mail"></svg>info@devstudio.com
             </a>
           </li>
           <li class="heade-item">
             <a href="tel:+380961111111" class="heade-link-communication link"
-              >+38 096 111 11 11</a
+              > <svg class="heade-icon" width="10" height="16"> <use href="./images/icons.svg.svg#icon-tel"></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -245,7 +245,7 @@
       <div class="container footer-container">
         <div class="footer-left-part">
           <a
-            href="https://i.imgur.com/JCCB1OW.png"
+            href="https://i.imgur.com/SfubzdW.png"
             lang="en"
             class="footer-log link"
             ><span>Web</span>Studio</a
